fix: fix center alignment css div's blocks

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
 .container{
     width: 1024px;
-    display: flex;
-	justify-content: center;
-    margin-left: auto;
     margin-right: auto;
-    
+    margin-left: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVJRzd-gilnNy4Q-1_zsXcgbRrS-zeyiNwy8hCyCBDHEn3QKIK);
+    background-size: 100%;
 }
+
+
